--- a/DeepFake_FaceDetection.ipynb
+++ b/DeepFake_FaceDetection.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyOsUiZ3UilIYTdKGpt1ZXP0"
     },
     "kernelspec": {
       "name": "python3",
